kubernetes/apps/filebrowser/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: nginx
  rules:
  - host: filebrowser.greenappleton.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filebrowser
            port:
              name: filebrowser
  tls:
  - hosts:
    - filebrowser.greenappleton.com
    secretName: filebrowser.greenappleton.com
